2006-12-10  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: set the sensitivity of "paste"
	according to the clipboard contents. Fixes #74051.

2006-12-10  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-documents-panel.c (refresh_list) (window_tab_added)
	(window_tabs_reordered) (treeview_row_inserted)
	(gedit_documents_panel_init): implements documents reordering using d&d

	* gedit/gedit-notebook.c (gedit_notebook_reorder_tab): do not reorder
	if the new position of the tab is equal to the old one

2006-12-09  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-store.c: only enable dragging
	for non dummy nodes
	
2006-12-09  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-store.c: check if a node
	is visible in the tree when removing its children. If its not visible
	than just free the children nodes. Fixes bug #384015 – Warning running 
	file browser plugin.

2006-12-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.c: sync with epiphany.

2006-12-09  Paolo Maggi  <paolo@gnome.org>

	* plugins/taglist/gedit-taglist-plugin-panel.c: adds a preview area,
	makes the tooltips working with combox box

2006-12-09  Paolo Maggi  <paolo@gnome.org>

	* plugins/taglist/HTML.tags.xml.in: added "sort" attribute to TagGroups,
	added a couple of missing elements.

	* plugins/taglist/Latex.tags.xml.in: 
	* plugins/taglist/XSLT.tags.xml.in: 
	* plugins/taglist/XUL.tags.xml.in: added "sort" attribute to TagGroup

	* plugins/taglist/gedit-taglist-plugin-panel.c (insert_tag)
	(tag_list_row_activated_cb) (tag_list_key_press_event_cb): move focus
	to document when double-clicking on a tag. Move focus also on 
	Ctrl + Return, but not on Return.

	* plugins/taglist/gedit-taglist-plugin-parser.c (tags_cmp)
	(parse_tag_group) (get_tag_group) (groups_cmp) (lookup_best_lang):
	sort the tags if needed, sort the tag groups.

2006-12-08  Paolo Maggi  <paolo@gnome.org>
