@@ -1,5 +1,10 @@
 2006-12-10  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit/gedit-module.c: fail gradefully if
+	'register_gedit_plugin' symbol is NULL.
+
+2006-12-10  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit/gedit-window.c: set the sensitivity of "paste"
 	according to the clipboard contents. Fixes #74051.
 
